# GG

./: .gitignore  CLAUDE.MD  CMakeLists.txt  LANGUAGE.md  compile.ps1  debug.ps1  main.cpp
.run/: Debug GG (class_test).run.xml
doc/: example.txt  grammar.txt
docs/: escape-analysis.md
e2e/: box_lib.gg  brace_init_test.gg  class_test.gg  comparison_test.gg  comprehensive_test.gg  cross_file_generics_test.gg  default_params_test.gg  destructor_test.gg  enum_test.gg  generic_bounds_test.gg  generic_classes_test.gg  generic_functions_test.gg  generic_impl_test.gg  implicit_this_test.gg  lambda_test.gg  new_reference_test.gg  overload_test.gg  pass_by_reference_test.gg  ref_test.gg  refcount_leak_test.gg  reference_fields_test.gg  reference_returns_test.gg  return_slot_test.gg  static_field_test.gg  static_local_test.gg  static_method_test.gg  std_lib.gg  string_test.gg  switch_test.gg  trait_test.gg  typed_pointer_test.gg  unified_signature_test.gg  value_copy_test.gg  value_field_test.gg  value_operator_test.gg
editor/clion/: README.md
editor/gg/: README.md  package.json
editor/gg/syntaxes/: gg.tmLanguage.json
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: gg.tmLanguage.json
samples/: comprehensive_test.gg  extern_crt.gg  extern_demo.gg  hello_factoriel.gg  std_lib.gg  variables.gg
source/: CompileError.h  CompilerOptions.h  GG.cpp  GG.h  ImportResolver.cpp  ImportResolver.h
source/codegen/: CodeGen.cpp  CodeGen.h  CodeGen_Classes.cpp  CodeGen_Debug.cpp  CodeGen_Emit.cpp  CodeGen_Exprs.cpp  CodeGen_Functions.cpp  CodeGen_Stmts.cpp  IR.h  IRPrinter.cpp  IRPrinter.h
source/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
source/parser/: Ast.h  AstPrinter.cpp  AstPrinter.h  Parser.cpp  Parser.h
source/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer_Escape.cpp  SemanticAnalyzer_Exprs.cpp  SemanticAnalyzer_Stmts.cpp  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h
stdlib/: Array.gg  array.gg  io.gg  math.gg  mem.gg  process.gg  string.gg  string_class.gg  vec.gg
stdlib/crt/: cmem.gg
tests/: array_tests.cpp  brace_init_tests.cpp  cast_tests.cpp  class_tests.cpp  codegen_tests.cpp  const_tests.cpp  debug_tests.cpp  default_param_tests.cpp  enum_tests.cpp  escape_tests.cpp  generic_bounds_tests.cpp  helpers.h  implicit_this_tests.cpp  import_tests.cpp  lambda_tests.cpp  lexer_tests.cpp  overload_tests.cpp  parser_tests.cpp  ref_tests.cpp  refcount_tests.cpp  return_slot_tests.cpp  semantic_tests.cpp  static_tests.cpp  stdlib_tests.cpp  switch_tests.cpp  trait_tests.cpp
